# ai_knowledge_agent

./: .gitignore  README.md  docker-compose.yml  init.sql  pyrightconfig.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: agent.py  auth.py  health.py  ingestion.py  insights.py  knowledge.py  organization.py  settings.py  tools.py
backend/app/core/: cache.py  config.py  database.py  deps.py  redis_client.py  runtime_settings.py  scheduler.py  security.py
backend/app/core/agent/: fast_path.py  graph.py  knowledge_gap.py  llm.py  memory_context.py  state.py  tool_invoker.py
backend/app/core/agent/nodes/: __init__.py  executor.py  planner.py  reasoner.py  reflector.py  responder.py  retriever.py
backend/app/core/agent/tools/: __init__.py  base.py  calendar_tool.py  email_tool.py  init_tools.py  registry.py  save_knowledge_tool.py  search_tool.py  todo_tool.py  web_search.py
backend/app/core/ingestion/: detector.py  markdown_format.py
backend/app/core/ingestion/extractors/: clipboard_extractor.py  file_extractor.py  url_extractor.py  voice_extractor.py
backend/app/core/vector/: embeddings.py
backend/app/models/: __init__.py  ingestion.py  knowledge.py  relation.py  response.py  schemas.py  session.py  tenant.py  todo.py  tool_log.py
backend/app/services/: auth_service.py  chat_service.py  clustering_service.py  deduplication_service.py  ingestion_service.py  knowledge_service.py  memory_service.py  organization_service.py  recommendation_service.py  relation_service.py  reminder_service.py  summary_service.py  tagging_service.py  tenant_scope.py  tool_service.py  trend_service.py
backend/migrations/: 001_supplement_tables.sql  002_tenant_auth.sql  003_username_global_unique.sql  004_memory_tenant.sql  run_migrations.sh
backend/scripts/: init_db_tables.py  smoke_test_api.sh
backend/test/: 新录音 6.m4a
backend/tests/: test_tool_registry.py
backend/tests/functions/: test_clustering.py  test_data.py  test_deduplication.py  test_extractor.py  test_organization.py  test_scheduler.py  test_summary.py  test_tagging.py
backend/tests/unit/: test_markdown_format.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: agent.ts  auth.ts  client.ts  health.ts  ingestion.ts  insights.ts  knowledge.ts  memory.ts  settings.ts  tools.ts  types.ts
frontend/src/components/: FileUpload.vue  KnowledgeGraph.vue  MarkdownBody.vue  TagCloud.vue  TrendChart.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  auth.ts  chat.ts  knowledge.ts
frontend/src/utils/: contentMarkdown.ts  markdown.ts
frontend/src/views/: AgentChat.vue  Dashboard.vue  KnowledgeBase.vue  Login.vue  Settings.vue  ToolsConsole.vue
