[project]
name = "ai-knowledge-agent-backend"
version = "0.1.0"
description = "智能个人知识库助手后端服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "openai>=1.40.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "greenlet>=3.5.1",
    "alembic>=1.18.4",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "markdown>=3.10.2",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "pillow>=12.2.0",
    "aiofiles>=24.1.0",
    "pytesseract>=0.3.13",
    "readability-lxml>=0.8.4.1",
    "trafilatura>=2.0.0",
    "apscheduler>=3.11.2",
    "scikit-learn>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "networkx>=3.6.1",
    "scipy>=1.17.1",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "google-auth-httplib2>=0.4.0",
    "google-api-python-client>=2.197.0",
    "aiosmtplib>=5.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.fastapi]
entrypoint = "app.main:app"
